Bug#27775 mediumint auto_increment with ndb_restore - autoincrement column of size medium int not handled in ndb_restore - added testcase also for other types, tiny, small... etc